# astrium

./: .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix
.github/workflows/: ci.yml
src/: broadcast.rs  color.rs  config.rs  lib.rs  main.rs  template.rs  theme.rs
